@@ -1,16 +1,13 @@
 package com.timedust.noRegenAndHungerPlugin.commands;
 
 import com.timedust.noRegenAndHungerPlugin.NoRegenAndHungerPlugin;
-import net.kyori.adventure.text.Component;
-import net.kyori.adventure.text.format.NamedTextColor;
+import org.bukkit.ChatColor;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandExecutor;
 import org.bukkit.command.CommandSender;
 import org.bukkit.command.TabCompleter;
-import org.jetbrains.annotations.NotNull;
-import org.jetbrains.annotations.Nullable;
-import org.jspecify.annotations.NonNull;
 
+import java.util.Collections;
 import java.util.List;
 
 public class PluginReloadCommand implements CommandExecutor, TabCompleter {
@@ -22,27 +19,27 @@ public class PluginReloadCommand implements CommandExecutor, TabCompleter {
     }
 
     @Override
-    public boolean onCommand(@NotNull CommandSender sender, @NotNull Command command, @NotNull String label, @NonNull @NotNull String[] args) {
+    public boolean onCommand(CommandSender sender, Command command, String label, String[] args) {
         if (!sender.hasPermission("noregenandhungerplugin.reload")) {
-            sender.sendMessage(Component.text("You do not have permission to use this command.", NamedTextColor.RED));
+            sender.sendMessage(ChatColor.RED + "You do not have permission to use this command.");
             return true;
         }
 
         if (args.length == 1 && args[0].equalsIgnoreCase("reload")) {
             plugin.reloadPluginConfig();
-            sender.sendMessage(Component.text("Config reloaded!",  NamedTextColor.GREEN));
+            sender.sendMessage(ChatColor.GREEN + "Config reloaded!");
             return true;
         }
 
-        sender.sendMessage(Component.text("Usage: /noregenandhungerplugin reload", NamedTextColor.GREEN));
+        sender.sendMessage(ChatColor.RED + "Usage: /noregenandhungerplugin reload");
         return true;
     }
 
     @Override
-    public @Nullable List<String> onTabComplete(@NotNull CommandSender sender, @NotNull Command command, @NotNull String label, @NonNull @NotNull String[] args) {
+    public List<String> onTabComplete(CommandSender sender, Command command, String label, String[] args) {
         if (args.length == 1) {
-            return List.of("reload");
+            return Collections.singletonList("reload");
         }
-        return List.of();
+        return Collections.emptyList();
     }
 }
